--- a/defaul2t.html
+++ b/defaul2t.html
@@ -12,7 +12,7 @@
 <body>
 
 
-This my html tutorial and now we are<del> using</del> ita.
+This my html tutorial and now we are<mark> using</mark> italic.
 
 </body>
 
