Update doc structure tag.html

--- a/doc structure tag.html
+++ b/doc structure tag.html
@@ -8,7 +8,7 @@
 <body>
       <div class="stylone">
 
- <h1> whate is full stack?</h1>
+ <h1> whais is called full stack developer</h1>
  <p>
 <div>
    A full stack web developer is a person who can develop both front-end development and back-end development.
